<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorWhite">

    <RelativeLayout style="@style/rt_title_view">
        <LinearLayout style="@style/ll_title_view1" android:id="@+id/lt_dashboard_title_menu"	>
            <TextView style="@style/tv_title_menu_left"	android:text="@string/title_dashboard_menu_left"/>
        </LinearLayout>

        <TextView style="@style/tv_title_name" android:text="@string/tv_listview_title" />

        <LinearLayout style="@style/ll_title_view1" android:layout_alignParentRight="true"
            android:id="@+id/lt_dashboard_title_add" >
            <ImageView style="@style/iv_title_menu_add" android:contentDescription="@string/title_left"/>
        </LinearLayout>
    </RelativeLayout>

    <com.baoyz.swipemenulistview.SwipeMenuListView
        android:id="@+id/listView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="12dp"
        android:divider="@color/colorBlack"
        android:dividerHeight="0.5dp"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/colorBlack"/>

</LinearLayout>